# TLS_JA4_Gatekeeper

./: CMakeLists.txt  README.md
demo/: demo_output.json  demo_text_output.txt  live_capture_success_example.txt  results.csv
include/: ja4.h  rules.h  tls_parser.h
rules/: fingerprints.txt
samples/: real_tls.pcap
src/: ja4.cpp  main.cpp  rules.cpp  tls_parser.cpp
